Started working with the clubs. Added all club images. Added the translated version to the two first translated files.
git-svn-id: http://linus.tigris.org/svn/linus/trunk@42 4080f326-681e-0410-b719-a5a39df2c7e6

--- a/eucw.html
+++ b/eucw.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!-- $Id$ -->
+<!-- Matching eucw.html 38 -->
 <HTML>
 <HEAD>
 <TITLE>EUCW (hos SCAG)</TITLE>
@@ -126,7 +128,7 @@ E-mail:... EA5AU (at-symbol) ure.es...<BR>
 
 <P><B>Radio Telegraphy Extremely High Speed Club</B><BR>
 QRQ-klubb, minst hastigheten 300<BR>
-ECM: vacant<BR>
+ECM: vakant<BR>
 </P>
 
 <HR>
