--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<!-- $Id$ -->
+<!-- Matching index.html 38 -->
 <HTML>
 <HEAD>
 <TITLE>EUCW-sidorna hos SCAG</TITLE>
