Small fixes and updates.
git-svn-id: http://linus.tigris.org/svn/linus/trunk@44 4080f326-681e-0410-b719-a5a39df2c7e6

--- a/ehsc.html
+++ b/ehsc.html
@@ -2,7 +2,7 @@
 <!-- Matching ehsc.html 38 -->
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
-<P><img src="ehsc.gif" ALT="" align=left></P>
+<P><img src="imgsclub/ehsc.gif" ALT="" align=left></P>
 <P ALIGN=LEFT>
 <a href="http://www.morsecode.nl/ehscn.html"><b>EHSC:</b></a>
 <b>E</b>xtremely <b>H</b>igh <b>S</b>peed <b>C</b>lub
