--- a/eucw.html
+++ b/eucw.html
@@ -158,7 +158,8 @@ E-mail:...mickg3lik (at-symbol) ntlworld.com...<BR>
 <P><B><IMG src="flags/uk.gif" align="left" alt="G:"><A href=
 "gqrp.html">G-QRP</A> (Storbritanien)</B></P>
 
-<P><B>G-QRP Club - Devoted to Low Power Communication</B><BR>
+<P><B>G-QRP Club - Devoted to Low Power Communication</B>
+(G-GRP-klubben - För lågeffektkommunikation<BR>
 QRP-klubb<BR>
 ECM: G3XJS, Peter Barville, Felucca, Pinesfield Lane, Trottiscliffe, 
 West Malling, Kent, ME19 5EN, England HP15 6UG,<BR>
