--- a/fists.html
+++ b/fists.html
@@ -18,11 +18,11 @@ som innefattar diplom, tester och en skriftlig bulletin som heter
 Key Notes (nyckelanteckningar eller viktiga anteckningar).
 <P>
 <a href=" http://www.fists.co.uk/">
-<img src="f/uk.gif" ALT="U.K. "> Klicka här </a> 
+<img src="flags/uk.gif" ALT="U.K. "> Klicka här </a> 
 för att se den brittiska grenens website.
 <P>
 <a href="http://www.fists.org"> 
-<img src="f/us.gif" ALT="U.S. "> Klicka här </a>
+<img src="flags/us.gif" ALT="U.S. "> Klicka här </a>
 för att se den amerikanska grenens website.
 
 <BR CLEAR=LEFT></P>
