--- a/gtc.html
+++ b/gtc.html
@@ -18,6 +18,7 @@ C</b>lub (Grekiska telegrafiklubben)</p>
 
 <p>
 Följande brev skickades ut i telegrafivärlden för att presentera klubben.
+<BR CLEAR=LEFT>
 </p>
 <P ALIGN="CENTER">
 Grekiska telegrafiklubben<br>
