More work done to the translation.
git-svn-id: http://linus.tigris.org/svn/linus/trunk@48 4080f326-681e-0410-b719-a5a39df2c7e6

--- a/eucw.html
+++ b/eucw.html
@@ -388,7 +388,7 @@ E-mail:...f6eno (at-symbol) wanadoo.fr...<BR>
 <P><B>The C.I.S. High Speed CW Club</B><BR>
 QRQ club, min. speed 200<BR>
 ECM: UT0FT, Vlad Grishchenko, Post Box 37, 270065 Odessa 65,
-Ukraine,<BR>
+Ukraina,<BR>
 E-mail:...ut0ft (at-symbol) iname.com...<BR>
 </P>
 
