More work done to the translation.
git-svn-id: http://linus.tigris.org/svn/linus/trunk@50 4080f326-681e-0410-b719-a5a39df2c7e6

--- a/eucw.html
+++ b/eucw.html
@@ -372,7 +372,7 @@ ECM: DJØMAQ, Czeslaw Grycz, Sigmaringer Str. 33, D-10713 Berlin<BR>
 
 <HR>
 <P><B><IMG src="flags/fr.gif" align="left" alt="F:"><A href=
-"http://www.agcw.org/eucw/5A">UFT</A> (Frankrike)</B></P>
+"uft.html">UFT</A> (Frankrike)</B></P>
 
 <P><B>Union française des Télégraphistes</B><BR>
 French language knowledges required<BR>
