More work done.
git-svn-id: http://linus.tigris.org/svn/linus/trunk@52 4080f326-681e-0410-b719-a5a39df2c7e6

--- a/eucwh.html
+++ b/eucwh.html
@@ -255,7 +255,7 @@ Förslag till en ny konstitution.
  
 <dd>
 CW-C-UFRC (Belgien) ändrade namn till CFT.
-FISTS skänker en EUCW QRS-vecka till att bli en ny EUCW-aktivitet.
+FISTS skänker en EUCWs QRS-vecka till att bli en ny EUCW-aktivitet.
 Första QRS-veckan hålls i april 2001.
 UFT dedikerar en 160m-tävling till EUCW.
 </dd>
