--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ på nyhetsgruppen de.comm.ham och på denna hemsida.
 EUCWs officiella språk är <I>Engelska</I>,
 och därför är utgångspunkten att all information först bara finns
 tillgänglig på Engelska.
-[Sedan kommer, i den tyska varianten,
+[Här finns, i den tyska varianten,
 en ursäkt om att inte allt är översatt till tyska men den är ointressant
 för den svenska publiken. Översättarens anmärkning.]
 
