--- a/scag.html
+++ b/scag.html
@@ -1,5 +1,5 @@
 <!-- $Id$ -->
-<!-- Matching scag.html 38 -->
+<!-- Matching 38 -->
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
 
