--- a/eucons.html
+++ b/eucons.html
@@ -142,7 +142,7 @@ fulla medlemmar i förbundet.<br>
 
     <strong>Stycke 2.</strong>
 Varje medlemsklubb representeras i förbundet av en utsedd
-EUCW-kommunikationsfunktionär (ECM) som måste kunna engelska.<br>
+EUCW-kontaktman (ECM) som måste kunna engelska.<br>
 
     <strong>Stycke 3.</strong>
 EUCW representeras officiellt av EUCW-ordföranden.
@@ -170,18 +170,18 @@ engelska.<br>
 
     <strong>Stycke 2.</strong>
 Ordföranden skall skicka en EUCW-bulletin till
-alla EUCW-kommunikationsfunktionärer en gång var tredje månade
+alla EUCW-kontaktmän en gång var tredje månaden
 som innehåller nyheter och information i EUCWs intresse.<br>
 
     <strong>Stycke 3.</strong>
-Varje EUCW-kommunikationsfunktionär måste hålla alla andra
-EUCW-kommunikationsfunktionärer informerade om frågor som rör
+Varje EUCW-kontaktman måste hålla alla andra
+EUCW-kontaktmän informerade om frågor som rör
 EUCWs intresse, normalt genom ordföranden och EUCW-bulletinen,
 men genom direkt kommunikation när tiden inte räcker till för 
 att cirkulera viktig infomation med normala medel.<br>
 
     <strong>Stycke 4.</strong>
-EUCW-kommunikationsfunktionär är ansvariga för att marknadsföra
+EUCW-kontaktmän är ansvariga för att marknadsföra
 medvetenhet och stöd för EUCWs aktiviteter bland medlemmarna i
 deras egen klubb och uppmuntra samarbete mellan deras egna
 klubbar och andra EUCW-medlemsklubbar.
@@ -203,11 +203,11 @@ amatörradiotidningarna i deras egna länder.<br>
   <font size="3">
     <strong>Stycke 1.</strong>
 Tillägg till konstitutionen kan föreslås från 
-en medlemsklubb med fullt medlemsskap genom deras EUCW-kommunikationsfunktionär
+en medlemsklubb med fullt medlemsskap genom deras EUCW-kontaktmän
 eller av EUCW-ordföranden.
 Sådana tillägg kräver godkännande av åtminstone två tredjedelar av
 alla medlemsklubbar med fullt medlemsskap, uttryckt genom deras
-representanter (EUCW-kommunikationsfunktionärer), för att godkännas.
+representanter (EUCW-kontaktmän), för att godkännas.
   </font>
 </p>
 
@@ -224,7 +224,7 @@ Reviderad november 1994.</strong><br>
 <P>Not: Se <A HREF="eucwh.html">EUCW-historian</A>
 för en komplett lista av medlemsklubbar och dagen för deras medlemsskap</P>
 <HR>
-<a href="eucw.html"> Tillbaka </a> till listan över EUCW-kommunikationsfunktionärer <br>
+<a href="eucw.html"> Tillbaka </a> till listan över EUCW-klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 </body>
 </html>
