--- a/liaison.html
+++ b/liaison.html
@@ -13,7 +13,7 @@
 <TD align="LEFT"><IMG src="imgs/eucwflag.gif" alt=""></TD>
 <TD align="CENTER">
 <H1>Det europeiska CW-förbundet (EUCW)<BR>
-<FONT size="-1">hos AGCW-DLs EUCW-kommunikationsfunktionär</FONT></H1>
+<FONT size="-1">hos AGCW-DLs EUCW-kontaktman</FONT></H1>
 </TD>
 <TD align="RIGHT"><IMG src="imgs/agcwecm.gif" alt=""></TD>
 </TR>
@@ -21,7 +21,7 @@
 
 <H2>Listan över de klubbar som EUCW har vänskapliga förbindelser med.</H2>
 Denna slags associering är öppen bara för klubbar utanför Europa.
-Kontakten med EUCW hålls via förbindelsefunktionärer.
+Kontakten med EUCW hålls via kontaktmän.
 <P><BR>
 Förmat för listan (som är sortera i alfabetisk ordning):</P>
 
@@ -31,7 +31,7 @@ Förmat för listan (som är sortera i alfabetisk ordning):</P>
 Engelska namnet om det finns och skiljer sig från det ursprungliga namnet
 (Det översatta namnet om översättaren klarar av det)</B><BR>
 Klubbens typ<BR>
-Förbindelsefunktionärens anropssignal, namn, post och mailaddress
+Kontaktmannens anropssignal, namn, post och mailaddress
 <BR>
 andra adresser<BR>
 </P>
