--- a/officers.html
+++ b/officers.html
@@ -12,7 +12,7 @@
 <TD align="LEFT"><IMG src="imgs/eucwflag.gif" alt=""></TD>
 <TD align="CENTER">
 <H1>Det europeiska CW-förbundet<BR>
-<FONT size="-1">hos AGCW-DLs EUCW-kommunikationsfunktionär</FONT></H1>
+<FONT size="-1">hos AGCW-DLs EUCW-kontaktman</FONT></H1>
 </TD>
 <TD align="RIGHT"><IMG src="imgs/agcwecm.gif" alt=""></TD>
 </TR>
@@ -55,11 +55,11 @@ G8PG, Gus Taylor, 37 Pickerill Rd, Greasby, Merseyside CH39
 3ND.</P>
 
 
-<P><A href="eucw.html">EUCW-kommunikationsfunktionär</A>.
-EUCW-kommunikationsfunktionärerna (ECM)
+<P><A href="eucw.html">EUCW-kontaktmän</A>.
+EUCW-kontaktmän (ECM)
 representerar sina medlemsklubbar i EUCW.</P> 
 
-<P><A href="liaison.html">Förbindelsefunktionärer</A>.
+<P><A href="liaison.html">Kontaktmän</A>.
 För att säkerställa vänskaplinga förbindelser
 som EUCW har med sina associerade transatlantiska klubbar.</P> 
 
