Added notices that some pages are not translated and translators comment on some pages.
git-svn-id: http://linus.tigris.org/svn/linus/trunk@54 4080f326-681e-0410-b719-a5a39df2c7e6

--- a/agcw.html
+++ b/agcw.html
@@ -1,5 +1,5 @@
 <!-- $Id$ -->
-<!-- Matching agcw.html 38 -->
+<!-- Matching 38 -->
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
 
@@ -27,4 +27,13 @@ AGCW har nära relationer med den vanliga amatörradioklubben i tyskland -
 <center> <hr width="100%"> </center>
 <a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body></html>
