--- a/arci.html
+++ b/arci.html
@@ -13,4 +13,13 @@ Det är en stor amerikansk klubb som ägnar sig åt lågeffekt-QRP.
 
 <center> <hr width="100%"> </center>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body></html>
