--- a/ehsc.html
+++ b/ehsc.html
@@ -1,5 +1,5 @@
 <!-- $Id$ -->
-<!-- Matching ehsc.html 38 -->
+<!-- Matching 38 -->
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
 <P><img src="imgsclub/ehsc.gif" ALT="" align=left></P>
@@ -13,4 +13,13 @@ de som gillar telegrafi i hastigheter på åtminstone 60 wpm
 <P><HR><P>
 <a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body></html>
