--- a/eucons.html
+++ b/eucons.html
@@ -226,5 +226,14 @@ för en komplett lista av medlemsklubbar och dagen för deras medlemsskap</P>
 <HR>
 <a href="eucw.html"> Tillbaka </a> till listan över EUCW-klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body>
 </html>
