--- a/eucw.html
+++ b/eucw.html
@@ -453,6 +453,15 @@ given tidsperiod.
 
 <HR>
 <A href="index.html">Tillbaka</A> till EUCWs startsida <BR>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </BODY>
 </HTML>
 
