--- a/eucwh.html
+++ b/eucwh.html
@@ -309,6 +309,15 @@ DK5KE,
 G4FAI
 (i kronologisk ordning).
 </p>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body>
 </html>
 
