--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <!-- $Id$ -->
-<!-- Matching index.html 38 -->
+<!-- Matching 38 -->
 <HTML>
 <HEAD>
 <TITLE>EUCW-sidorna hos SCAG</TITLE>
@@ -43,21 +43,17 @@ Funktionärer</FONT></A></P>
 "Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF" align=
 "center">Ändamål</FONT></A></P>
 
-<P><A href="d/eucwp.html"><FONT face="Arial, Helvetica, sans-serif"
+<P><A href="eucwp.html"><FONT face="Arial, Helvetica, sans-serif"
 size="+1" color="#FFFFFF">EUCW FP-aktivitet</FONT></A></P>
 
-<P><A href="d/euskd.html"><FONT face="Arial, Helvetica, sans-serif"
+<P><A href="euskd.html"><FONT face="Arial, Helvetica, sans-serif"
 size="+1" color="#FFFFFF">Handpumpsdag</FONT></A></P>
 
-<P><A href="d/Deuqrs.html"><FONT face=
+<P><A href="euqrs.html"><FONT face=
 "Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF">QRS-veckan</FONT></A></P>
 
-<P><A href="d/Deu160.html"><FONT face=
+<P><A href="eu160.html"><FONT face=
 "Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF">160m party
-</FONT></A></P>
-
-<P><A href="d/Deucwa.html"><FONT face=
-"Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF">EUCW Diplom
 </FONT></A></P>
 
 </TD>
@@ -116,12 +112,6 @@ Tom (hb9dod at agcw.de, som koordinerar ON och PA) och
 Micha (df4wx).
 </P>
 
-<P>
-Sidorna är översatta till svenska av Linus, SM5OUU.
-Antingen från den tyska eller den engelska versionen.
-[Översättarens anmärkning].
-</P>
-
 <P>&nbsp;</P>
 </TD>
 <TD width="1" bgcolor="#999999">&nbsp;</TD>
@@ -134,7 +124,7 @@ i andra länder.
 </P>
 
 <P>
-Vi (AGCW [Översättarens anmärkning]) välkomnar nybörjare och
+Vi [AGCW, Översättarens anmärkning]) välkomnar nybörjare och
 är ivriga att visa dem det äldsta och troligen vackraste
 moden inom amatörradio.
 
@@ -172,17 +162,26 @@ för den svenska publiken. Översättarens anmärkning.]
 Skicka kommentarer på innehållet till ECM i AGCW (Email: EUCW (at) agcw . de).
 </FONT></P>
 
-<P><FONT size="-1">73 de IK2RMZ
-AGCW 897</FONT> <IMG src="imgs/email.gif" width= "400" height="56" 
-alt="eucw à agcw.de"> </P>
+<P>
+<FONT size="-1">73 de IK2RMZ
+AGCW 897</FONT>
+<IMG src="imgs/email.gif" width= "400" height="56" alt="eucw à agcw.de">
+</P>
 </TD>
 <TD align="RIGHT">
 <IMG src="imgs/agcwecm.gif" alt=""></TD>
 </TR>
+
+<TR>
+  <TD colspan="2">
+   <IFRAME src="svdisc.html" width="100%">
+  </TD>
+</TR>
+
 </TABLE>
 </TD>
 </TR>
 </TABLE>
 </BODY>
 </HTML>
-
+ 
