--- a/liaison.html
+++ b/liaison.html
@@ -65,6 +65,15 @@ Argentina E-mail:...gacw (at_symbol) lan.no-ip.org...
 </P>
 <HR>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </BODY>
 </HTML>
 
