--- a/bqc.html
+++ b/bqc.html
@@ -1,5 +1,5 @@
 <!-- $Id$ -->
-<!-- Matching bqc.html 38 -->
+<!-- Matching 38 -->
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
 
@@ -20,4 +20,13 @@ Benelux QRP Club, Postbus 15, 2100 AA, Heemstede, Nederländerna
 <center> <hr width="100%"> </center>
 <a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body></html>
