Updated with translators note on every page. A few more pages translated.
git-svn-id: http://linus.tigris.org/svn/linus/trunk@56 4080f326-681e-0410-b719-a5a39df2c7e6

--- a/eucwa.html
+++ b/eucwa.html
@@ -1,17 +1,140 @@
-<html>
-  <head>
-    <meta http-equiv="Refresh" content="20;http://www.agcw.org/eucw/eucwa.html">
-    <title>EUCW info hos SCAG</title>
-  </head>
-  <body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
-    <h1>Sidan är ännu ej översatt!</h1>
-    <p>
-Denna sida är ännu inte översatt till svenska.
-Om en liten stund förflyttas du därför automatiskt till
-<a href="http://www.agcw.org/eucw/eucwa.html">
-http://www.agcw.org/eucw/eucwa.html
-</a>
-som är den icke översatta versionen av samma sida.
-    </p>
-  </body>
-</html>
+<!-- $Id$ -->
+<!-- Matching 38 -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<HTML>
+<HEAD>
+<TITLE>EUCW Diplomet</TITLE>
+<LINK rel="SHORTCUT ICON" href="imgs/eucw.ico">
+</HEAD>
+<BODY bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
+"purple">
+<TABLE width="100%">
+<TR>
+<TD align="left"><IMG src="imgsclub/hcc.gif" alt=""></TD>
+<TD align="center">
+<H1>Det europeiska CW-förbundet</H1>
+<H2 align="center">Kört EUCW Diplom</H2>
+</TD>
+<TD align="right"><IMG src="imgs/eucwflag.gif" alt=""></TD>
+</TR>
+</TABLE>
+<HR>
+<CENTER>
+EUCW är tacksamma gentemot HCC (Hispania CW Club)
+för att de stod för tryckkostnaden för certifikaten
+till EUCW-diplomet</CENTER>
+<HR>
+<P><BR>
+<STRONG>Allmänna regler</STRONG><BR>
+
+<STRONG>1</STRONG>. Detta prestigfulla diplom är tillgängligt
+för alla licensierade radioamatörer och kortvågslyssnare 
+var som helst i världen.<BR>
+
+<STRONG>2</STRONG>. Enbart kontakter genomförda efter 
+den 27:e April 1991,
+(Samuel F.B. Morses tvåhundraåriga födelsedag)
+gäller för detta diplom.<BR>
+
+<STRONG>3</STRONG>.
+Ansökaren skall skicka en lista med kontakter
+(eller hörda SWL-stationer
+[SWL-stationer listar hörda stationer, översättarens anmärkning])
+för vilka QSL-kort mottagits.
+Listan måste vidimeras av en licensierad radioamatör som är
+medlem i en EUCW-klubb och som anger namnet på sin klubb
+och sitt medlemsskapsnummer.<BR>
+
+<STRONG>4</STRONG>.
+Listan skall innehålla
+datum för kontakten,
+anropssignal på den körda stationen,
+band,
+namn på operatören,
+QTH,
+EUCW-klubb,
+klubb medlemsnummer.<BR>
+
+<STRONG>5</STRONG>.
+Se <A href="eucw.html">http://www.scag.se/eucw-sv/eucw.html</A>
+för att hitta en lista med EUCW-klubbar.<BR>
+
+<STRONG>6</STRONG>.
+Olika certifikat utfärdas för varje klass på diplomet.<BR>
+
+<STRONG>7</STRONG>.
+Avgiften är EUR 6, USD 8 eller 12 IRS.<BR>
+
+<STRONG>8</STRONG>.
+Ansökningar för diploment skall skickas till diplomfunktionären:<BR>
+Denna post är för närvarande inte besatt.
+Diplomspekulanter bör sitta på sin ansökan tills dess att
+en ny diplomfunktionär offentliggörs.
+[<a href="#award_manager">Längre ner på sidan</a>
+står det vem diplomfunktionären är.
+Det är f.n. oklart om det är denna information eller informationen
+nedan är gammal. Översättarens anmärkning]<BR>
+
+<STRONG>9</STRONG>.
+Diplomfunktionärens beslut är slutgiltigt för alla ansökningar.
+</P>
+
+<P><BR>
+<STRONG>Krav för diplomet</STRONG><BR>
+<STRONG>1</STRONG>.
+Bekräftade kontakter på bara telegrafi.
+(Lyssnaramatörer - hörda telegrafistationer)
+med 100 olika stationer som är medlemmar i EUCW-klubbar,
+på tre olika amatörradioband med åtminstone 20 stationer
+körda eller hörda på varje ban.<BR>
+
+<STRONG>2</STRONG>. 
+De 100 stationerna körda eller hörda på tre band
+måste inkludera åtminstone tre medlemmar från vardera av sex olika
+EUCW-klubbar.<BR>
+
+<STRONG>3</STRONG>.
+Upp till 40 stationer körda eller hörda den 27:de April, 1991,
+på tvåhundraårsdagen av Samuel F.B. Morses födelse,
+kommer att räknas som dubbla kontakter.
+Alla andra krav är oförändrade.</P>
+
+<P><BR>
+<STRONG>Diplomets klasser</STRONG><BR>
+
+<STRONG>a</STRONG>) <STRONG>Vanliga diplomet</STRONG> -
+100 tvåvägskontakter genomförda med tillåten sändningseffekt.<BR>
+
+<STRONG>b</STRONG>) <STRONG>QRP diplomet</STRONG> -
+100 tvåvägskontakter genomföra då ansökaren inte använder
+mer än 5 warr r.f. uteffekt.<BR>
+
+<STRONG>c</STRONG>) <STRONG>Lyssnaramatördiplomet</STRONG> -
+100 hörda stationer oavsett effekt.</P>
+
+<P><STRONG>Certifikat<BR></STRONG>
+De attraktiva diplomcertifikaten är tryckta på tungt papper
+av pergamenttyp och har en bild av Europa 
+"på Samuel F.B. Morses tid".</P>
+
+<P>Klicka <A href="imgsdpl/eucwa.gif">här</A>
+för att se diplomets utseende.</P>
+
+<P><a name="award_manager">EUCWdiplomfunktionär</a>:<BR>
+DK7VW, Werner 'Joe' Jochem, Wendelsborn 34, D-66606 St. Wendel,
+E-mail:...joe (at-symbol) dk7vw.de...</P>
+<HR>
+
+<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
+</BODY>
+</HTML>
