--- a/hsc.html
+++ b/hsc.html
@@ -28,5 +28,14 @@ Websidor:<BR CLEAR="left">
 <P><HR><P>
 <a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body></html>
 
