--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Funktionärer</FONT></A></P>
 
 <P><A href="eucons.html"><FONT face=
 "Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF" align=
-"center">Ändamål</FONT></A></P>
+"center">Syfte</FONT></A></P>
 
 <P><A href="eucwp.html"><FONT face="Arial, Helvetica, sans-serif"
 size="+1" color="#FFFFFF">EUCW FP-aktivitet</FONT></A></P>
