--- a/officers.html
+++ b/officers.html
@@ -65,6 +65,15 @@ som EUCW har med sina associerade transatlantiska klubbar.</P>
 
 <HR>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </BODY>
 </HTML>
 
