--- a/gqrp.html
+++ b/gqrp.html
@@ -17,4 +17,13 @@ som alla hemmabyggare kommer att tycka är mycket intressant.
 <center> <hr width="100%"> </center>
 <a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body></html>
