--- a/gtc.html
+++ b/gtc.html
@@ -265,6 +265,15 @@ SV - CW - Medlemmar
 <a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 </p>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body>
 </html>
 
