--- a/iqrp.html
+++ b/iqrp.html
@@ -21,4 +21,13 @@ Kontakt E-mail...i3ffe (at-symbol) quipo.it...
 <center> <hr width="100%"> </center>
 <a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body></html>
