--- a/olang.html
+++ b/olang.html
@@ -47,5 +47,14 @@ algunos ficheros</a>.
 
 <HR>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </BODY>
 </HTML>
