--- a/spcwc.html
+++ b/spcwc.html
@@ -57,4 +57,13 @@ E-mail:...qtc (at-symbol) post.pl...<P>
 <center> <hr width="100%"> </center>
 <a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body></html>
