--- a/svdisc.html
+++ b/svdisc.html
@@ -4,17 +4,22 @@
 <P>
 <FONT size="-1">
 <h3>Översättarens ruta</h3>
+<P>
 Dessa sidor är översatta till svenska av SM5OUU Linus,
 antingen från den tyska eller den engelska versionen
-som finns hos AGCW-DL.
-Kommentarer på sidorna skickas lämpligen direkt till den ansvarige på sidan
-enligt ovan.
-Kommentarer på översättningen skickas till översättaren via
-email: sm5ouu (at) ssa . se.
-Om du vill jämföra med originalen så finns originalet 
-<a href="http://www.agcw.org/eucw/" target="_new">här</a>.
+som finns hos AGCW-DL
+som de såg ut <nobr>2007-01-16</nobr>.
 För att underlätta underhåll och jämförelser har sidornas namn, innehåll
 och layout bevarats i så stor utsträckning som är möjligt.
+</P>
+
+<P>
+Kommentarer på sidorna skickas lämpligen direkt till den ansvarige
+för sidorna (IK2RMZ på Email: EUCW (at) agcw . de).
+Kommentarer på översättningen skickas till översättaren via
+email: sm5ouu (at) ssa . se.
+</p>
+
 </FONT>
 </P>
 </BODY>
