--- a/vhsc.html
+++ b/vhsc.html
@@ -63,4 +63,13 @@ E-mail...dingelom (at-symbol) hetnet.nl...
 <P><HR><P>
 <a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
+
+<TABLE WIDTH="100%">
+  <TR>
+    <TD colspan="2">
+     <IFRAME src="svdisc.html" width="100%">
+    </TD>
+  </TR>
+</TABLE>
+
 </body></html>
