--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <HTML>
 <HEAD>
 <TITLE>EUCW-sidorna hos SCAG</TITLE>
+<META charset="ISO-8859-1">
 <LINK rel="SHORTCUT ICON" href="imgs/eucw.ico">
 </HEAD>
 <BODY bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
