--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <HTML>
 <HEAD>
 <TITLE>EUCW-sidorna hos SCAG</TITLE>
-<META charset="ISO-8859-1">
+<META charset="UTF-8">
 <LINK rel="SHORTCUT ICON" href="imgs/eucw.ico">
 </HEAD>
 <BODY bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
@@ -15,7 +15,7 @@
 <P><FONT color="#FFFFFF"><IMG src="imgs/eucwflag.gif" width="152"
 height="152" alt="EUCW Logo"></FONT></P>
 
-<P><IMG src="flags/se.gif" alt="på Svenska"></P>
+<P><IMG src="flags/se.gif" alt="pÃ¥ Svenska"></P>
 
 <P><A href="news.html"><FONT face="Arial, Helvetica, sans-serif"
 size="+1" color="#FFFFFF">Nyheter</FONT></A></P>
@@ -28,7 +28,7 @@ size="+1" color="#FFFFFF">Medlemsklubbar</FONT></A></P>
 Associerade klubbar</FONT></A></P>
 
 <P><A href="eunov.html"><FONT face="Arial, Helvetica, sans-serif"
-size="+1" color="#FFFFFF">Nybörjardiplom</FONT></A></P>
+size="+1" color="#FFFFFF">NybÃ¶rjardiplom</FONT></A></P>
 
 <P><A href="eucwa.html"><FONT face="Arial, Helvetica, sans-serif"
 size="+1" color="#FFFFFF">EUCW-diplom</FONT></A></P>
@@ -38,7 +38,7 @@ size="+1" color="#FFFFFF">Historia</FONT></A></P>
 
 <P><A href="officers.html"><FONT face=
 "Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF">
-Funktionärer</FONT></A></P>
+FunktionÃ¤rer</FONT></A></P>
 
 <P><A href="eucons.html"><FONT face=
 "Arial, Helvetica, sans-serif" size="+1" color="#FFFFFF" align=
@@ -59,9 +59,9 @@ size="+1" color="#FFFFFF">Handpumpsdag</FONT></A></P>
 
 </TD>
 <TD width="100%">
-<H1 align="center">Det europeiska CW-förbundet<BR>
+<H1 align="center">Det europeiska CW-fÃ¶rbundet<BR>
  The European CW Association<BR>
- <FONT size="-1">den svenska översättningen av dessa sidor finns hos SCAG</FONT></H1>
+ <FONT size="-1">den svenska Ã¶versÃ¤ttningen av dessa sidor finns hos SCAG</FONT></H1>
 
 <P align="left"><IMG src="flags/de.gif" width= "30" height="20"
 alt=""><A href="http://www.agcw.org/eucw/index.html">
@@ -70,11 +70,11 @@ alt=""><A href="http://www.agcw.org/eucw/index.html">
 alt=""><A href="http://www.agcw.org/eucw/english.html">
 <FONT size="-1">Engelska (finns hos AGCW-DL)<FONT></A><BR>
 <IMG src="flags/eo.gif" width= "30" height="20" alt="">
-<A href="olang.html"><FONT size="-1">Esperanto (översättningen saknas)</FONT></A><BR>
+<A href="olang.html"><FONT size="-1">Esperanto (Ã¶versÃ¤ttningen saknas)</FONT></A><BR>
 <IMG src="flags/fr.gif" width= "30" height="20" alt="">
-<A href="olang.html"><FONT size="-1">Franska (översättningen saknas)</FONT></A><BR>
+<A href="olang.html"><FONT size="-1">Franska (Ã¶versÃ¤ttningen saknas)</FONT></A><BR>
 <IMG src="flags/it.gif" width= "30" height="20" alt="">
-<A href="olang.html"><FONT size="-1">Italienska (översättningen saknas)</FONT></A><BR>
+<A href="olang.html"><FONT size="-1">Italienska (Ã¶versÃ¤ttningen saknas)</FONT></A><BR>
 <IMG src="flags/es.gif" width= "30" height="20" alt="">
 <A href="http://www.ea3re.com/eacwclub/paginas/eucw_castellano.html">
 <FONT size="-1">Katalanska (Finns hos EACW)</FONT></A><BR>
@@ -85,30 +85,30 @@ alt=""><A href="http://www.agcw.org/eucw/english.html">
 <TD width="50%">
 <P>
 <A href="http://www.morsecode.nl/eucw.html" target="_blank">EUCW</A>
-är ett förbund av europeiska telegrafiklubbar.
+Ã¤r ett fÃ¶rbund av europeiska telegrafiklubbar.
 </P>
 
 <P>
-Organisationens mål är att skapa ett förbund av oberoende europeiska
-amatörradio telegrafiklubbar.
-Genom arbetet i förbundet kan medlemsklubbarna utbyta idéer och information,
-organisera olika aktiviteter med ömsesidigt utbyte,
-och samarbeta för amatörradiotelegrafins bästa.
+Organisationens mÃ¥l Ã¤r att skapa ett fÃ¶rbund av oberoende europeiska
+amatÃ¶rradio telegrafiklubbar.
+Genom arbetet i fÃ¶rbundet kan medlemsklubbarna utbyta idÃ©er och information,
+organisera olika aktiviteter med Ã¶msesidigt utbyte,
+och samarbeta fÃ¶r amatÃ¶rradiotelegrafins bÃ¤sta.
 </P>
 
 <P>
-Medlemmar i EUCW är inte enskilda personer utan europeiska telegrafiklubbar,
-dvs. rena CW-klubbar och också QRP-klubbar som på ett naturligt sätt ofta
-värdesätter CW.
-Också icke-europeiska organisation kan vara associerade med EUCW.
+Medlemmar i EUCW Ã¤r inte enskilda personer utan europeiska telegrafiklubbar,
+dvs. rena CW-klubbar och ocksÃ¥ QRP-klubbar som pÃ¥ ett naturligt sÃ¤tt ofta
+vÃ¤rdesÃ¤tter CW.
+OcksÃ¥ icke-europeiska organisation kan vara associerade med EUCW.
 </P>
 
 <P>
-Varje medlemsförening utser en representant som kallas
+Varje medlemsfÃ¶rening utser en representant som kallas
 ECM (EUCW Communications Manager)
-för att hantera kommunikationen med EUCW.
+fÃ¶r att hantera kommunikationen med EUCW.
 
-Dessa web-sidor underhålls av ECM för AGCW (Martin, ik2rmz) med stöd av
+Dessa web-sidor underhÃ¥lls av ECM fÃ¶r AGCW (Martin, ik2rmz) med stÃ¶d av
 Tom (hb9dod at agcw.de, som koordinerar ON och PA) och
 Micha (df4wx).
 </P>
@@ -118,30 +118,30 @@ Micha (df4wx).
 <TD width="1" bgcolor="#999999">&nbsp;</TD>
 <TD width="50%">
 <P>
-AGCW är en av de största tyska telegrafiklubbarna.
-Huvudsyftet med klubben är att uppmuntra och stödja morse inom amatörradio.
-Den grundades 1971 och har ca 2000 medlemmar, främst i tyskland men också
-i andra länder.
+AGCW Ã¤r en av de stÃ¶rsta tyska telegrafiklubbarna.
+Huvudsyftet med klubben Ã¤r att uppmuntra och stÃ¶dja morse inom amatÃ¶rradio.
+Den grundades 1971 och har ca 2000 medlemmar, frÃ¤mst i tyskland men ocksÃ¥
+i andra lÃ¤nder.
 </P>
 
 <P>
-Vi [AGCW, Översättarens anmärkning]) välkomnar nybörjare och
-är ivriga att visa dem det äldsta och troligen vackraste
-moden inom amatörradio.
+Vi [AGCW, Ã–versÃ¤ttarens anmÃ¤rkning]) vÃ¤lkomnar nybÃ¶rjare och
+Ã¤r ivriga att visa dem det Ã¤ldsta och troligen vackraste
+moden inom amatÃ¶rradio.
 
-Vi hjälper dem över passivitetströskeln (och att klara morseprovet)
+Vi hjÃ¤lper dem Ã¶ver passivitetstrÃ¶skeln (och att klara morseprovet)
 som hindrar andra att vara med.
 </P>
 
 <P>
-AGCW organiserar CW Contents och ger ut CW-diplom för att uppmuntra
-CW på banden.
-Vi distribuerar en tryckt tidning "AGCW-Info" (på tyska) två gånger om året
-med information om vår klubb,
+AGCW organiserar CW Contents och ger ut CW-diplom fÃ¶r att uppmuntra
+CW pÃ¥ banden.
+Vi distribuerar en tryckt tidning "AGCW-Info" (pÃ¥ tyska) tvÃ¥ gÃ¥nger om Ã¥ret
+med information om vÃ¥r klubb,
 testresultat,
 och andra intressanta bidrag.
-Vi sänder också ut QTC via radio på CW och paketradio,
-på nyhetsgruppen de.comm.ham och på denna hemsida.
+Vi sÃ¤nder ocksÃ¥ ut QTC via radio pÃ¥ CW och paketradio,
+pÃ¥ nyhetsgruppen de.comm.ham och pÃ¥ denna hemsida.
 </P>
 
 <P>&nbsp;</P>
@@ -152,21 +152,21 @@ på nyhetsgruppen de.comm.ham och på denna hemsida.
 <TABLE width="100%" border="0" cellpadding="2">
 <TR>
 <TD>
-EUCWs officiella språk är <I>Engelska</I>,
-och därför är utgångspunkten att all information först bara finns
-tillgänglig på Engelska.
-[Här finns, i den tyska varianten,
-en ursäkt om att inte allt är översatt till tyska men den är ointressant
-för den svenska publiken. Översättarens anmärkning.]
+EUCWs officiella sprÃ¥k Ã¤r <I>Engelska</I>,
+och dÃ¤rfÃ¶r Ã¤r utgÃ¥ngspunkten att all information fÃ¶rst bara finns
+tillgÃ¤nglig pÃ¥ Engelska.
+[HÃ¤r finns, i den tyska varianten,
+en ursÃ¤kt om att inte allt Ã¤r Ã¶versatt till tyska men den Ã¤r ointressant
+fÃ¶r den svenska publiken. Ã–versÃ¤ttarens anmÃ¤rkning.]
 
-<P><FONT size="-1">Senast uppdaterad: <A href="news.html">tryck här.</A><BR>
-Skicka kommentarer på innehållet till ECM i AGCW (Email: EUCW (at) agcw . de).
+<P><FONT size="-1">Senast uppdaterad: <A href="news.html">tryck hÃ¤r.</A><BR>
+Skicka kommentarer pÃ¥ innehÃ¥llet till ECM i AGCW (Email: EUCW (at) agcw . de).
 </FONT></P>
 
 <P>
 <FONT size="-1">73 de IK2RMZ
 AGCW 897</FONT>
-<IMG src="imgs/email.gif" width= "400" height="56" alt="eucw à agcw.de">
+<IMG src="imgs/email.gif" width= "400" height="56" alt="eucw Ã  agcw.de">
 </P>
 </TD>
 <TD align="RIGHT">
