Add front matter

--- a/eucwa.html
+++ b/eucwa.html
@@ -1,5 +1,6 @@
-<!-- $Id$ -->
-<!-- Matching 38 -->
+---
+translated: 2007-05-14
+---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <HTML>
 <HEAD>
