--- a/eucw.html
+++ b/eucw.html
@@ -1,6 +1,7 @@
+---
+translated: 2007-05-14
+---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<!-- $Id$ -->
-<!-- Matching eucw.html 38 -->
 <HTML>
 <HEAD>
 <TITLE>EUCW (hos SCAG)</TITLE>
