--- a/fists.html
+++ b/fists.html
@@ -1,5 +1,6 @@
-<!-- $Id$ -->
-<!-- Matching fists.html 38 -->
+---
+translated: 2007-05-14
+---
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <P><img src="imgsclub/fists.gif" ALT="" align=left>
 <BR CLEAR=LEFT>
