--- a/gtc.html
+++ b/gtc.html
@@ -1,5 +1,6 @@
-<!-- $Id$ -->
-<!-- Matching gtc.html 38 -->
+---
+translated: 2007-05-14
+---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 <head>
