--- a/hsc.html
+++ b/hsc.html
@@ -1,5 +1,6 @@
-<!-- $Id$ -->
-<!-- Matching hsc.html 38 -->
+---
+translated: 2007-05-14
+---
 <html>
 <BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <img src="imgsclub/hsc.gif" ALT="" align=left>
