--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+---
+translated: 2007-05-14
+---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<!-- $Id$ -->
-<!-- Matching 38 -->
 <HTML>
 <HEAD>
 <TITLE>EUCW-sidorna hos SCAG</TITLE>
