--- a/inorc.html
+++ b/inorc.html
@@ -1,5 +1,6 @@
-<!-- $Id$ -->
-<!-- Matching inorc.html 38 -->
+---
+translated: 2007-05-14
+---
 <html>
 <BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
