--- a/olang.html
+++ b/olang.html
@@ -1,5 +1,6 @@
-<!-- $Id$ -->
-<!-- Matching 38 -->
+---
+translated: 2007-05-14
+---
 <HEAD>
   <TITLE>EUCW hos SCAG</TITLE>
   <LINK rel="SHORTCUT ICON" href="imgs/eucw.ico">
