--- a/shsc.html
+++ b/shsc.html
@@ -1,5 +1,6 @@
-<!-- $Id$ -->
-<!-- Matching shsc.html 38 -->
+---
+translated: 2007-05-14
+---
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
 <P><img src="imgsclub/shsc.gif" ALT="" align=left></P>
