--- a/translate_order.html
+++ b/translate_order.html
@@ -2,20 +2,24 @@
 title: Translation order
 translated: 2024-03-19
 ---
-Sidor att gå igenom.
+<h1>Sidor att gå igenom</h1>
 
+<p>
 Ordningen är i första hand de med högst "priority", därefter lägre och
 de som inte har någon angiven "priority" sist.
+</p>
 
+<p>
 Inom varje "priority" är det först de utan datum och därefter de med
 datum med de äldsta först.
+</p>
 <ol>
   {% assign sorted = site.pages |
      sort: 'translated' | reverse |
      sort: 'priority' | reverse %}
   {% for p in sorted %}
   <li>
-    <a href="{{ p.url }}">{{ p.url }}</a> {{ p.priority }} {{ p.translated }}
+    <a href="{% p.url | replace_first: "/", "" %}">{{ p.url }}</a> {{ p.priority }} {{ p.translated }}
   </li>
   {% endfor %}
 </ol>
